Fixing some collapsing styles in the calendar. Now it should be full responsive 2: This time it's personal

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -5,7 +5,7 @@
   background-image: url(../assets/task-photo.jpeg);
   filter: blur(50px);
   -webkit-filter: blur(50px);
-  height: 100%;
+  height: 100vh;
   width: 100%;
   z-index: 1;
   background-repeat: no-repeat;
@@ -16,33 +16,34 @@
   display: flex; 
   flex-direction: row;
   align-items: center;
-  justify-content: center; /* Centrar verticalmente */
-  height: 100vh; /* Ocupa toda la altura de la pantalla */
+  justify-content: center;
+  height: 100vh; 
   gap: 35px;
-  z-index: 2; /* Asegurar que esté encima del fondo */
-  position: relative; /* Posicionamiento relativo para mantenerlo encima del bg-wrapper */
-  margin: 0 auto; /* Centrar horizontalmente */
-  padding: 0 10%; /* Ajustar el padding para control de espacios laterales */
+  z-index: 2; 
+  position: relative; 
+  margin: 0 auto; 
+  padding: 0 10%;
 }
 
 .task-wrapper {
   width: 40%;
-  height: 100vh;
+  height: fit-content;
+  max-height: 100%;
   background-color: rgb(255,255,255,0.5);
   border-radius: 10px;
   box-shadow: 10px 5px 5px grey;
 }
 
 .list-wrapper {
-  height: 100vh; /* Mantener la altura general del contenedor */
+  height: 85%; 
   width: 60%;
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 10px;
   box-shadow: 10px 5px 5px grey;
-  padding: 10px; /* Agregar padding para separar el contenido de los bordes */
-  overflow: hidden; /* Evita overflow inesperado en general */
+  padding: 10px; 
+  overflow: hidden; 
   display: flex;
-  flex-direction: column; /* Asegura que el contenido se apile verticalmente */
+  flex-direction: column; 
 }
 
 .hide-completed {
